--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -79,7 +79,7 @@ standard-page-width = 1124px
 standard-page-padding = 1rem
 
 //Button size
-button-small-fontsize = 0.86rem
+button-small-fontsize = .86rem
 button-medium-fontsize = 1.2rem
 button-large-fontsize = 1.34rem
 button-big-fontsize = 1.5rem
@@ -88,6 +88,13 @@ button-small-padding = .65em 1.8em
 button-medium-padding = .75em 1.8em
 button-large-padding = .85em 2em
 button-big-padding = .95em 2.2em
+
+//Tooltip text size
+tooltip-tiny = .72rem
+tooltip-small = .86rem
+tooltip-medium = 1.1rem
+tooltip-large = 1.4rem
+tooltip-big = 1.8rem
 
 //Image size
 image-mini = 35px
