--- a/src/styl/blossom.styl
+++ b/src/styl/blossom.styl
@@ -2,6 +2,7 @@
 @import 'jeet'
 @import 'rupture'
 
+@import 'modules/font'
 @import 'modules/variables'
 @import 'modules/ui'
 @import 'modules/breakpoints'
