--- a/src/styl/modules/comments.styl
+++ b/src/styl/modules/comments.styl
@@ -2,10 +2,8 @@
   cf()
   .comment
     position relative
-    margin-top .8rem
+    margin-top 1.4rem
     cf()
-    .comment
-      margin-left -1.8rem
     .avatar
       width 2.5rem
       height 2.5rem
@@ -53,4 +51,6 @@
     textarea
       margin-top 1rem
   .group
-    margin-top 1rem
+    margin-top 1.4rem
+    .button
+      border-radius border-radius-normal
