--- a/src/styl/modules/dropdowns.styl
+++ b/src/styl/modules/dropdowns.styl
@@ -20,12 +20,13 @@
   .menu
     background-color #fff
     absolute top 2rem left 0
-    border 2px solid background-light-grey
+    border 1px solid background-light-grey
     border-radius border-radius-normal
-    min-width 180px
+    min-width 13rem
     z-index 2000
     display none
     padding 1rem 0
+    box-shadow 0 1px 5px 0 box-shadow-grey
   li
     display block
     i
@@ -58,4 +59,4 @@
       top auto
       bottom 2rem
   .sub
-    left 180px
+    left 13rem
