--- a/src/styl/modules/forms.styl
+++ b/src/styl/modules/forms.styl
@@ -132,6 +132,10 @@
         &::-webkit-slider-thumb
           border 3px solid background-light-grey
           background-color #fff
+  &.block
+    textarea, input
+      max-width none
+      width 100%
 
 .action
   input
