--- a/src/styl/modules/labels.styl
+++ b/src/styl/modules/labels.styl
@@ -3,7 +3,7 @@
   color text-lighter-grey
   padding 0.5rem .86rem
   display inline-block
-  font-size .7em
+  font-size font-size-label
   line-height .76em
   border-radius border-radius-normal
   font-weight 700
@@ -14,7 +14,7 @@
     border-radius 50%
     width 2.4em
     height 2.4em
-    line-height .86em
+    line-height 1em
     text-align center
   .detail
     background-color rgba(0, 0, 0, .1)
