--- a/src/styl/modules/stages.styl
+++ b/src/styl/modules/stages.styl
@@ -37,6 +37,7 @@
     background-color #fff
     padding 1rem 1.8rem
     position relative
+    overflow hidden
     .header
       display block
       font-weight 500
