--- a/src/styl/modules/variables.styl
+++ b/src/styl/modules/variables.styl
@@ -1,7 +1,8 @@
 //Typography
 font-size-hero = 1.2em
+font-size-label = .76rem
 font-size-small = .86rem
-font-size-code = .8rem
+font-size-code = .86rem
 font-size-standard = 16px
 font-size-h1 = 3.8em
 font-size-h2 = 2.4em
@@ -10,7 +11,7 @@ font-size-h4 = 1.6em
 font-size-h5 = 1.4em
 font-size-h6 = 1.2em
 
-font-family-standard = -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+font-family-standard = "Inter UI", sans-serif;
 font-family-code = 'Roboto Mono', 'Consolas', 'Monaco', 'Lucida Console', monospace
 
 //Colors
@@ -23,7 +24,7 @@ color-heading = #1c2a40
 color-red = #ff2d2d
 color-orange = #ff8f17
 color-yellow = #ffbd00
-color-green = #12d057
+color-green = #06c78a
 color-teal = #00b1a1
 color-blue = #1d7aff
 color-violet = #af00e8
@@ -46,7 +47,7 @@ border-important = lighten(color-red, 10%)
 border-success = lighten(color-green, 10%)
 
 border-grey = color-smoke
-box-shadow-grey = rgba(38,38,40,.1)
+box-shadow-grey = rgba(70, 72, 75, 0.1)
 
 text-button-primary = primary-white
 text-button-red = primary-white
