--- a/src/styl/modules/lists.styl
+++ b/src/styl/modules/lists.styl
@@ -8,7 +8,7 @@ ul.list, ol.list
   li, .item
     padding 0.25rem 0
     position relative
-    line-height 1.2rem
+    line-height 1.7rem
     display list-item
     table-layout fixed
     &:after
@@ -20,14 +20,14 @@ ul.list, ol.list
       display block
     .header
       font-weight 600
-      line-height 1.15rem
+      line-height 1.5rem
     .icon
       &.large
-        font-size font-size-h6
-        line-height 2rem
+        font-size font-size-h5
+        line-height 2.6rem
       display inline-block
       vertical-align middle !important
-      margin-right 12px
+      margin-right 1rem
     .content
       display inline-block
       vertical-align top
