--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -31,7 +31,7 @@
     display block
 
 .main-content
-  padding-bottom 80px
+  padding-bottom 6rem
   +below('m')
     padding-top 3.4rem
     padding-bottom 18rem
@@ -402,6 +402,8 @@ section.features
     overflow hidden
     margin 0 -1.8em
     cf()
+    .section::-webkit-scrollbar
+      display none
     &:first-child
       margin-top -1.6em
     &:last-child
@@ -607,6 +609,9 @@ section.features
 
 .group + .group
   margin-top 1.8rem
+
+.b-group
+  margin-top 1.4rem
 
 .module
   transition all 100ms cubic-bezier(0.16, 0.86, 0.44, 1)
@@ -840,7 +845,6 @@ aside.sidebar
       margin-right .6rem
       line-height .86rem
       letter-spacing 0
-      font-size font-size-small
     p
       line-height 1.8rem
       & + p
@@ -858,7 +862,7 @@ footer.footer
   span(1/1)
   absolute bottom left
   background-color #fff
-  padding 1.8rem 0
+  padding 2.4rem 0
   .links
     li + li
       margin-left 2rem
