refactor: Restructured blossom dev environment

--- a/src/styl/page.styl
+++ b/src/styl/page.styl
@@ -1,7 +1,7 @@
 @import 'jeet'
 @import 'nib'
 @import 'rupture'
-@import 'modules/variables'
+@import './../../Blossom/source/modules/variables'
 
 #app
   width 100%
@@ -759,7 +759,7 @@ aside.sidebar
   float right
   cf()
   .fixed
-    width 30%
+    width 100%
     max-width 195px
     height 100%
     overflow auto
